Partially remove entwine from dublincore
Replace entwine code with plain Java in the dublincore module.
Leaves some entwine that would otherwise require large changes
in the index or external-api modules.